--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <h6>
                   <span> $21.99
                     <h6>
-                  </span> Get two Brisket burgers ( beef, chicken, or veggie) with a side of your choice and drinks
+                  </span> Get two burgers of your choice ( beef, chicken, or veggie) with a side of your choice and drinks
                 </h6>
                 </h6>
                 <a href="order_online.html">
