--- a/menu.html
+++ b/menu.html
@@ -249,7 +249,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/xr8vl8whx1mebymyfubi.jpg" alt="">
+                  <img src="images/ONIONRINGS123.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
