--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
 
   <div id="centeredContainer">
     <div class="image-container">
-      <img id="centeredImage" src="images/BBQ Bacon CHeddar Burger1.jpg" alt="Centered Image">
+      <img id="centeredImage" src="images/wide-picture-blue-sky-white-260nw-1372490390.webp" alt="Centered Image">
       <div id="centeredText">
-        <p>Steak me home tonight</p>
+        <p>BBQ Bacon Burger</p>
         <button id="orderButton">Order Now</button>
       </div>
     </div>
