--- a/menu.html
+++ b/menu.html
@@ -340,7 +340,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/istockphoto-1351167362-612x612.jpg" alt="">
+                  <img src="images/CHIPS-GUAC123.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
