--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <div id="centeredContainer">
     <div class="image-container">
-      <img id="centeredImage" src="images/wide-picture-blue-sky-white-260nw-1372490390.webp" alt="Centered Image">
+      <img id="centeredImage" src="images/FAMILY-MEAL1234.png" alt="Centered Image">
       <div id="centeredText">
         <p>BBQ Bacon Burger</p>
         <button id="orderButton">Order Now</button>
