--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="row justify-content-center py-3">
+        <div class="col-md-5 text-center">
+            <!-- First centered image -->
+            <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="First Image" style="width: 100%; max-width: none;">
+        </div>
+        <div class="col-md-1"></div> <!-- Space between images -->
+        <div class="col-md-5 text-center">
+            <!-- Second centered image -->
+            <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="Second Image" style="width: 100%; max-width: none;">
+        </div>
+    </div>
+</div>
+    
+</div>
           
           <!-- Add more HTML content or close the body and html tags as needed -->
   </section>
