--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <!-- First centered image -->
             <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="First Image" style="width: 100%; max-width: none;">
         </div>
-        <div class="col-md-1"></div> <!-- Space between images -->
+        <div class="col-md-.5"></div> <!-- Space between images -->
         <div class="col-md-5 text-center">
             <!-- Second centered image -->
             <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="Second Image" style="width: 100%; max-width: none;">
@@ -226,7 +226,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Menu
+          Top seallers 
         </h2>
       </div>
 
