--- a/index.html
+++ b/index.html
@@ -189,12 +189,26 @@
 
   <!-- offer section -->
 
+  <style>
+    #centeredText p {
+      font-style: italic;
+      font-family: 'Dancing Script', cursive;
+      font-size: 1.2em; /* Adjust the size as needed */
+      font-weight: bold; /* Adjust the weight as needed */
+      color: black; /* Set the font color to black */
+    }
+  </style>
+  
   <div id="centeredContainer">
     <div class="image-container">
       <img id="centeredImage" src="images/FAMILY-MEAL1234.png" alt="Centered Image">
       <div id="centeredText">
         <p>BBQ Bacon Burger</p>
         <button id="orderButton">Order Now</button>
+      </div>
+    </div>
+  </div>
+  
       </div>
     </div>
   </div>
