--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   
   <div id="centeredContainer">
     <div class="image-container">
-      <img id="centeredImage" src="images/FAMILY-MEAL1234.png" alt="Centered Image">
+      <img id="centeredImage" src="images/Outback-Steakhouse-Launches-New-Steak-‘N-Mate-Combos-678x381.jpg" alt="Centered Image">
       <div id="centeredText">
         <p>BBQ Bacon Burger</p>
         <button id="orderButton">Order Now</button>
