--- a/index.html
+++ b/index.html
@@ -203,28 +203,43 @@
     <div class="image-container">
       <img id="centeredImage" src="images/Outback-Steakhouse-Launches-New-Steak-‘N-Mate-Combos-678x381.jpg" alt="Centered Image">
       <div id="centeredText">
-        <p>BBQ Bacon Burger</p>
+        <p style="font-size: 50px; color: #dad6d6; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);">Delicious Moments Await!</p>
         <button id="orderButton">Order Now</button>
       </div>
     </div>
   </div>
   
+  
+  
+  
+  
+  
+  <div class="container">
+    <div class="row justify-content-center py-3">
+      <div class="col-md-5 text-center">
+        <!-- First centered image with About Us button -->
+        <div class="image-container d-flex flex-column align-items-center">
+          <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="First Image" style="width: 100%; max-width: none;">
+          <div class="about-button-container mt-auto">
+            <a href="#aboutUs" class="btn btn-success">About Us</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-.5"></div> <!-- Space between images -->
+      <div class="col-md-5 text-center">
+        <!-- Second centered image with Book Table button -->
+        <div class="image-container d-flex flex-column align-items-center">
+          <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="Second Image" style="width: 100%; max-width: none;">
+          <div class="about-button-container mt-auto">
+            <a href="#bookTable" class="btn btn-success">Book Table</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="container">
-    <div class="row justify-content-center py-3">
-        <div class="col-md-5 text-center">
-            <!-- First centered image -->
-            <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="First Image" style="width: 100%; max-width: none;">
-        </div>
-        <div class="col-md-.5"></div> <!-- Space between images -->
-        <div class="col-md-5 text-center">
-            <!-- Second centered image -->
-            <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="Second Image" style="width: 100%; max-width: none;">
-        </div>
-    </div>
-</div>
+  
+  
+  
     
 </div>
           
