buttons work now

--- a/index.html
+++ b/index.html
@@ -204,10 +204,13 @@
       <img id="centeredImage" src="images/Outback-Steakhouse-Launches-New-Steak-‘N-Mate-Combos-678x381.jpg" alt="Centered Image">
       <div id="centeredText">
         <p style="font-size: 50px; color: #dad6d6; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);">Delicious Moments Await!</p>
-        <button id="orderButton">Order Now</button>
+        <a href="order_online.html">
+          <button id="orderButton">Order Now</button>
+        </a>
       </div>
     </div>
   </div>
+  
   
   
   
@@ -221,7 +224,7 @@
         <div class="image-container d-flex flex-column align-items-center">
           <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="First Image" style="width: 100%; max-width: none;">
           <div class="about-button-container mt-auto">
-            <a href="#aboutUs" class="btn btn-success">About Us</a>
+            <a href="about.html" class="btn btn-success">About Us</a>
           </div>
         </div>
       </div>
@@ -231,16 +234,12 @@
         <div class="image-container d-flex flex-column align-items-center">
           <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="Second Image" style="width: 100%; max-width: none;">
           <div class="about-button-container mt-auto">
-            <a href="#bookTable" class="btn btn-success">Book Table</a>
+            <a href="book.html" class="btn btn-success">Book Table</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
-  
-  
-    
 </div>
           
           <!-- Add more HTML content or close the body and html tags as needed -->
@@ -255,7 +254,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Top seallers 
+          Top sellers 
         </h2>
       </div>
 
@@ -477,7 +476,7 @@
         <a href="menu.html">
           View More
         </a>
-      </div>
+      </div>  
     </div>
   </section>
 
