--- a/menu.html
+++ b/menu.html
@@ -807,24 +807,19 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/delicious-funnel-cake-dark-background-with-empty-space-for-text-photo-transformed (2).jpeg" alt="">
+                  <img src="images/FUNNELCAKE123456789.PNG" alt="" style="height: 100%;">
                 </div>
                 <div class="detail-box">
-                  <h5>
-                    Funnel Cake
-                  </h5>
-                  <p>
-                    A  golden-fried delight dusted with powdered sugar and chocolate syrup
+                  <h5>Funnel Cake</h5>
+                  <p>A golden-fried delight dusted with powdered sugar and chocolate syrup</p>
                   <div class="options">
-                    <h6>
-                      $7.99
-                    </h6>
+                    <h6>$7.99</h6>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        
+          
           <div class="col-sm-6 col-lg-4 all dessert">
             <div class="box">
               <div>
