image with logo

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       font-family: 'Dancing Script', cursive;
       font-size: 1.2em; /* Adjust the size as needed */
       font-weight: bold; /* Adjust the weight as needed */
-      color: black; /* Set the font color to black */
+      color: rgb(221, 199, 199); /* Set the font color to black */
     }
   </style>
   
@@ -222,7 +222,7 @@
       <div class="col-md-5 text-center">
         <!-- First centered image with About Us button -->
         <div class="image-container d-flex flex-column align-items-center">
-          <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="First Image" style="width: 100%; max-width: none;">
+          <img src="images/416060106_391158146605378_9045848083691411808_n (2) (1).png" class="img-fluid" alt="First Image" style="width: 100%; max-width: none;">
           <div class="about-button-container mt-auto">
             <a href="about.html" class="btn btn-success">About Us</a>
           </div>
