Revert "centering buttons"
This reverts commit d7f2c135db1c5b2f204490cb0fd6be34369451b9.

--- a/menu.html
+++ b/menu.html
@@ -295,14 +295,14 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/PRETZELS CUH.PNG" alt="">
+                  <img src="images/sourdough-pretzel-bites-1_500x286.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Soft Pretzels
+                    Pretzel Bites
                   </h5>
                   <p>
-                  warm pretzels, topped with a pinch of coarse salt, served with a side of cheese dipping sauce
+                    bite-sized golden nuggets of soft, warm pretzel, topped with a pinch of coarse salt, served with a side of cheese dipping sauce
                   </p>
                   <div class="options">
                     <h6>
@@ -807,24 +807,19 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/FUNNELCAKE123456789.PNG" alt="">
+                  <img src="images/FUNNELCAKE123456789.PNG" alt="" style="height: 100%;">
                 </div>
                 <div class="detail-box">
-                  <h5>
-                    Funnel Cake
-                  </h5>
-                  <p>
-                    A  golden-fried delight dusted with powdered sugar and chocolate syrup
+                  <h5>Funnel Cake</h5>
+                  <p>A golden-fried delight dusted with powdered sugar and chocolate syrup</p>
                   <div class="options">
-                    <h6>
-                      $7.99
-                    </h6>
+                    <h6>$7.99</h6>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        
+          
           <div class="col-sm-6 col-lg-4 all dessert">
             <div class="box">
               <div>
