--- a/index.html
+++ b/index.html
@@ -217,48 +217,30 @@
   
   
   
-  <style>
-    .image-container {
-      position: relative;
-      height: 50vh; /* Adjust the height as needed */
-    }
-  
-    .button-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  </style>
-  
   <div class="container">
     <div class="row justify-content-center py-3">
-      <div class="col-md-5 text-center position-relative">
+      <div class="col-md-5 text-center">
         <!-- First centered image with About Us button -->
-        <div class="image-container">
+        <div class="image-container d-flex flex-column align-items-center">
           <img src="images/416060106_391158146605378_9045848083691411808_n (2) (1).png" class="img-fluid" alt="First Image" style="width: 100%; max-width: none;">
-          <div class="button-container">
+          <div class="about-button-container mt-auto">
             <a href="about.html" class="btn btn-success">About Us</a>
           </div>
         </div>
       </div>
       <div class="col-md-.5"></div> <!-- Space between images -->
-      <div class="col-md-5 text-center position-relative">
+      <div class="col-md-5 text-center">
         <!-- Second centered image with Book Table button -->
-        <div class="image-container">
+        <div class="image-container d-flex flex-column align-items-center">
           <img src="images/BBQ Bacon CHeddar Burger1.jpg" class="img-fluid" alt="Second Image" style="width: 100%; max-width: none;">
-          <div class="button-container">
+          <div class="about-button-container mt-auto">
             <a href="book.html" class="btn btn-success">Book Table</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-  </body></section>
-  
-  
-  
-  
+</div>
           
           <!-- Add more HTML content or close the body and html tags as needed -->
   </section>
