--- a/menu.html
+++ b/menu.html
@@ -295,7 +295,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/sourdough-pretzel-bites-1_500x286.jpg" alt="">
+                  <img src="images/PRETZELS CUH.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
