--- a/menu.html
+++ b/menu.html
@@ -203,7 +203,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Fried pickles.webp" alt="">
+                  <img src="images/fp9.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
