--- a/team.html
+++ b/team.html
@@ -169,7 +169,7 @@
         </div>
       </div>
 
-      <div class="col-sm-6 col-lg-4 all appetizers">
+      <div class="col-sm-6 col-lg-4 all appetizers mx-auto">
         <div class="box">
           <div>
             <div class="images">
@@ -187,6 +187,8 @@
       </div>
     </div>
   </div>
+</section>
+
 </section>
 
 
