--- a/menu.html
+++ b/menu.html
@@ -204,7 +204,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/fp9.PNG" alt="">
+                  <img src="images/fried pickles 1 (2).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -712,14 +712,14 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/ezgif.com-webp-to-jpg-converter.jpg" alt="Another Burger Image">
+                  <img src="images/Steak_FINAL123.PNG" alt="Another Burger Image">
                 </div>
                 <div class="detail-box">
                   <h5>
                     NYC Strip Steak
                   </h5>
                   <p>
-                    a prime cut prized for tenderness and robust flavor. Each bite is a succulent experience, embodying the essence of New York's culinary excellence.                    <p>
+                    A prime cut prized for its tenderness and robust flavor. Each bite is a succulent experience, embodying culinary excellence in every mouthful.                    <p>
                 </p>
               </p>
                  <div class="options">
@@ -808,11 +808,11 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/FUNNELCAKE123456789.PNG" alt="" style="height: 100%;">
+                  <img src="images/BROWNIE.PNG" alt="" style="height: 100%;">
                 </div>
                 <div class="detail-box">
-                  <h5>Funnel Cake</h5>
-                  <p>A golden-fried delight dusted with powdered sugar and chocolate syrup</p>
+                  <h5>Brownies</h5>
+                  <p>Decadent brownies, rich and fudgy, a heavenly treat to satisfy your sweet cravings.</p>
                   <div class="options">
                     <h6>$7.99</h6>
                   </div>
