nav bar and deals

--- a/contact.html
+++ b/contact.html
@@ -64,48 +64,50 @@
             </span>
           </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class=""> </span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="menu.html">Menu</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="book.html">Book Table</a>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                  More
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
-                  <a class="dropdown-item" href="team.html">Team</a>
-                  <a class="dropdown-item" href="contact.html">Contact</a>
-                  <a class="dropdown-item" href="special events.html">Events</a>
-
-                  <!-- Add more items here as needed -->
-                </div>
-              </li>
-            </ul>
-          <div class="user_option">
-            <a href="order_online.html" class="order_online">
-              Order Online
-            </a>
-          </div>
-        </div>
-      </nav>
+    <span class=""> </span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="menu.html">Menu</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="book.html">Book Table</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="team.html">Team</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="special events.html">Events</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="specials.html">Specials</a>
+      </li>
+      </li>
+    </ul>
+    <div class="user_option">
+      <!-- Your existing user options go here -->
+      <a href="order_online.html" class="order_online">
+        Order Online
+      </a>
     </div>
+  </div>
+  </nav>
+  </div>
   </header>
-    <!-- end header section -->
+  <!-- end header section -->
   </div>
 
   <script type="text/javascript" src="https://form.jotform.com/jsform/240337231783050"></script>
