--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,8 @@
     <div class="bg-box">
       <img src="images/hero-bg.jpg" alt="">
     </div>
-    <!-- header section starts -->
-    <header class="header_section">
+     <!-- header section starts -->
+     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
@@ -71,31 +71,33 @@
   
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="menu.html">Menu</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="specials.html">Specials</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="book.html">Book Table</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="team.html">Team</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="special events.html">Events</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="specials.html">Specials</a>
-      </li>
-      </li>
+       <!-- More Option with Dropdown -->
+       <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+          More
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
+                    <a class="dropdown-item" href="contact.html">Contact</a>
+                    <a class="dropdown-item" href="about.html">About</a>
+                    <a class="dropdown-item" href="team.html">Team</a>
+                    <a class="dropdown-item" href="special events.html">Events</a>
+
+
+          <!-- Add more items here as needed -->
+        </div>
     </ul>
     <div class="user_option">
       <!-- Your existing user options go here -->
