--- a/order_online.html
+++ b/order_online.html
@@ -85,67 +85,62 @@
 
 <body>
 
-  <!-- header section starts -->
+   <!-- header section starts -->
+   <header class="header_section">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg custom_nav-container ">
+        <a class="navbar-brand" href="index.html">
+          <span>
+            <img src="images/Main_logo.png" alt="Logo">
+          </span>
+        </a>
 
- <body class="sub_page">
-  <div class="hero_area">
-    <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
-    </div>
-    <!-- header section starts -->
-    <header class="header_section">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <span>
-              <img src="images/Main_logo.png" alt="Logo">
-            </span>
-          </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class=""> </span>
+</button>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class=""> </span>
-  </button>
-  
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="menu.html">Menu</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="book.html">Book Table</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="team.html">Team</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="special events.html">Events</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="specials.html">Specials</a>
-      </li>
-      </li>
-    </ul>
-    <div class="user_option">
-      <!-- Your existing user options go here -->
-      <a href="order_online.html" class="order_online">
-        Order Online
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav mx-auto">
+    <li class="nav-item ">
+      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="menu.html">Menu</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="specials.html">Specials</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="book.html">Book Table</a>
+    </li>
+     <!-- More Option with Dropdown -->
+     <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
+         aria-haspopup="true" aria-expanded="false">
+        More
       </a>
-    </div>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
+                  <a class="dropdown-item" href="contact.html">Contact</a>
+                  <a class="dropdown-item" href="about.html">About</a>
+                  <a class="dropdown-item" href="team.html">Team</a>
+                  <a class="dropdown-item" href="special events.html">Events</a>
+
+
+        <!-- Add more items here as needed -->
+      </div>
+  </ul>
+  <div class="user_option">
+    <!-- Your existing user options go here -->
+    <a href="order_online.html" class="order_online">
+      Order Online
+    </a>
   </div>
-  </nav>
-  </div>
-  </header>
-  <!-- end header section -->
+</div>
+</nav>
+</div>
+</header>
+<!-- end header section -->
   </div>
     <!-- end header section -->
 
