--- a/special events.html
+++ b/special events.html
@@ -159,6 +159,7 @@
   </div>
   </header>
   <!-- end header section -->
+</div>
         <!-- Events section starts here -->
         <div class="container-center">
             <div class="event-bar public-event">
