--- a/order_online.html
+++ b/order_online.html
@@ -83,8 +83,12 @@
   </style>
 </head>
 
-<body>
 
+  <body class="sub_page">
+    <div class="hero_area">
+      <div class="bg-box">
+        <img src="images/hero-bg.jpg" alt="">
+      </div>
    <!-- header section starts -->
    <header class="header_section">
     <div class="container">
