tryed working on this thing

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     Prime Rib Sandwich
                   </h5>
                   <p>
-                    Grilled and blackened ribeye on an onion bun, sautéed onions and melted Swiss cheese
+                    Savor the deliciousness of a grilled ribeye on a soft onion bun with caramelized onions and melted Swiss cheese, creating an irresistible symphony of flavors in every mouthful!
                   </p>
                   <div class="options">
                     <h6>
