--- a/menu.html
+++ b/menu.html
@@ -344,7 +344,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/CHIPS-GUAC123.png" alt="">
+                  <img src="images/Main_logo (1) (1).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
