--- a/special events.html
+++ b/special events.html
@@ -199,29 +199,20 @@
     </div>
 
  <!-- footer section -->
- <footer class="footer_section">
+<footer class="footer_section">
   <div class="container">
     <div class="row">
       <div class="col-md-4 footer-col">
         <div class="footer_contact">
-          <h4>
-            Contact Us
-          </h4>
+          <h4>Contact Us</h4>
           <div class="contact_link_box">
-
-              </span>
-            </a>
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>
-                Call +01 (800) GRILL-FUN
-              </span>
+              <span>Call +01 (800) GRILL-FUN</span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
-              <span>
-                gamedaygrill@gmail.com
-              </span>
+              <span>gamedaygrill@gmail.com</span>
             </a>
           </div>
         </div>
@@ -232,9 +223,8 @@
             <!-- Replace the placeholder below with your logo image path -->
             <img src="images/Main_logo.png" alt="Game Day Grill Logo">
           </a>
-          <p>
-            
-          </p>
+          <p></p>
+          <a href="mural.html" class="btn btn-primary">Mural</a> <!-- Button with link added here -->
           <div class="footer_social">
             <a href="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -255,43 +245,13 @@
         </div>
       </div>
       <div class="col-md-4 footer-col">
-        <h4>
-          Opening Hours
-        </h4>
-        <p>
-          Monday - Friday
-        </p>
-        <p>
-          8.00 Am -2.30 Pm
-        </p>
+        <h4>Opening Hours</h4>
+        <p>Monday - Friday</p>
+        <p>8.00 Am -2.30 Pm</p>
       </div>
     </div>
     <div class="footer-info">
-      <p>
-        &copy; <span id="displayYear"></span> This is a school project 
-      </p>
+      <p>&copy; <span id="displayYear"></span> This is a school project</p>
     </div>
   </div>
 </footer>
- <!-- jQery -->
- <script src="js/jquery-3.4.1.min.js"></script>
- <!-- popper js -->
- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
- </script>
- <!-- bootstrap js -->
- <script src="js/bootstrap.js"></script>
- <!-- owl slider -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
- </script>
- <!-- isotope js -->
- <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
- <!-- nice select -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
- <!-- custom js -->
- <script src="js/custom.js"></script>
- <!-- Google Map -->
- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
- </script>
- <!-- End Google Map -->
-
-</body>
