--- a/menu.html
+++ b/menu.html
@@ -815,7 +815,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>Brownies</h5>
-                  <p>Decadent brownies, rich and fudgy, a heavenly treat to satisfy your sweet cravings.</p>
+                  <p>Decadent brownies, rich and fudgy, a heavenly treat to satisfy your sweet.</p>
                   <div class="options">
                     <h6>$7.99</h6>
                   </div>
@@ -891,29 +891,29 @@
                 </div>
             </div>
         </div>
-          <div class="col-sm-6 col-lg-4 all drink">
-            <div class="box">
+        <div class="col-sm-6 col-lg-4 all drink">
+          <div class="box">
               <div>
-                <div class="images">
-                  <img src="images/Iced_tea(1).PNG" alt="Another Appetizer Image">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Ice Tea
-                  </h5>
-                  <p>
-                    Tea that has a perfect mix between robust flavor and cooled refreshment
-                  </p>
-                  <div class="options">
-                    <h6>
-                      $2.99 <!-- Replace with the actual price -->
-                    </h6>
-                    </a>
+                  <div class="images">
+                      <img src="images/ICED TEA (1).jpg" alt="Another Appetizer Image">
                   </div>
-                </div>
+                  <div class="detail-box">
+                      <h5>
+                       iced tea
+                      </h5>
+                      <p>
+                        Tea that has a perfect mix between robust flavor and cooled refreshment
+                      </p>
+                      <div class="options">
+                          <h6>
+                              $4.49 <!-- Replace with the actual price -->
+                          </h6>
+                          </a>
+                      </div>
+                  </div>
               </div>
-            </div>
           </div>
+      </div>
           <div class="col-sm-6 col-lg-4 all drink">
             <div class="box">
               <div>
@@ -942,19 +942,19 @@
 
   <!-- end food section -->
 
-  <!-- footer section -->
-<footer class="footer_section">
+ <!-- footer section -->
+ <footer class="footer_section">
   <div class="container">
     <div class="row">
       <div class="col-md-4 footer-col">
         <div class="footer_contact">
           <h4>Contact Us</h4>
           <div class="contact_link_box">
-            <a href="">
+            <a href="#">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>Call +01 (800) GRILL-FUN</span>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>gamedaygrill@gmail.com</span>
             </a>
@@ -964,25 +964,23 @@
       <div class="col-md-4 footer-col">
         <div class="footer_detail">
           <a href="#" class="footer-logo">
-            <!-- Replace the placeholder below with your logo image path -->
             <img src="images/Main_logo.png" alt="Game Day Grill Logo">
           </a>
           <p></p>
-          <a href="mural.html" class="btn btn-primary">Mural</a> <!-- Button with link added here -->
           <div class="footer_social">
-            <a href="">
+            <a href="#">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-pinterest" aria-hidden="true"></i>
             </a>
           </div>
@@ -992,6 +990,8 @@
         <h4>Opening Hours</h4>
         <p>Monday - Friday</p>
         <p>8.00 Am -2.30 Pm</p>
+        <a href="mural.html" style="color: white;">Mural</a> <!-- Text link for Mural page with white color -->
+        <a href="terms.html" style="color: white;">Terms and Conditions</a> <!-- Text link for Terms and Conditions page with white color -->
       </div>
     </div>
     <div class="footer-info">
@@ -999,3 +999,24 @@
     </div>
   </div>
 </footer>
+<!-- jQery -->
+<script src="js/jquery-3.4.1.min.js"></script>
+<!-- popper js -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<!-- bootstrap js -->
+<script src="js/bootstrap.js"></script>
+<!-- owl slider -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<!-- isotope js -->
+<script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
+<!-- nice select -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+<!-- custom js -->
+<script src="js/custom.js"></script>
+<!-- Google Map -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+<!-- End Google Map -->
+
+<!-- Your additional scripts go here -->
+</body>
+</html>
