--- a/about.html
+++ b/about.html
@@ -69,9 +69,8 @@
             </span>
           </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<<<<<<< HEAD
     <span class=""> </span>
   </button>
   
@@ -91,32 +90,11 @@
       </li>
        <!-- More Option with Dropdown -->
        <li class="nav-item dropdown">
-=======
-          <span class=""> </span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="menu.html">Menu</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="book.html">Book Table</a>
-             <!-- More Option with Dropdown -->
-      <li class="nav-item dropdown">
->>>>>>> parent of 0b479c2 (nav bar and deals)
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
            aria-haspopup="true" aria-expanded="false">
           More
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
-<<<<<<< HEAD
                     <a class="dropdown-item" href="contact.html">Contact</a>
                     <a class="dropdown-item" href="about.html">About</a>
                     <a class="dropdown-item" href="team.html">Team</a>
@@ -125,31 +103,19 @@
 
           <!-- Add more items here as needed -->
         </div>
-=======
-          <a class="dropdown-item" href="team.html">Team</a>
-          <a class="dropdown-item" href="contact.html">Contact</a>
-          <a class="dropdown-item" href="special events.html">Events</a>
-          <!-- Add more items here as needed -->
-        </div>
-      </li>
->>>>>>> parent of 0b479c2 (nav bar and deals)
     </ul>
-          <div class="user_option">
-            <a href="order_online.html" class="order_online">
-              Order Online
-            </a>
-          </div>
-        </div>
-      </nav>
+    <div class="user_option">
+      <!-- Your existing user options go here -->
+      <a href="order_online.html" class="order_online">
+        Order Online
+      </a>
     </div>
+  </div>
+  </nav>
+  </div>
   </header>
-<<<<<<< HEAD
   <!-- end header section -->
 <
-=======
-    <!-- end header section -->
-
->>>>>>> parent of 0b479c2 (nav bar and deals)
 <!--Body section-->
 <!-- about section -->
 
