--- a/specials.html
+++ b/specials.html
@@ -199,22 +199,18 @@
             <div class="box">
               <div>
                 <div class="images">
-<<<<<<< HEAD
                   <img src="images/fried_crinkle_cut_pickles,_onion (6).png" alt="">
-=======
-                  <img src="images/theworldend_1_500x286.jpg" alt="">
->>>>>>> parent of b641114 (pictures)
                 </div>
                 <div class="detail-box">
                   <h5>
                     Crispy Classics
                   </h5>
                   <p>
-                    Includes Crunchy Onion Rings, Fried Pickles, Cajun Fries, and a sweet finish with Funnel cake.
+                    Includes Crunchy Onion Rings, Fried Pickles, Cajun Fries
                   </p>
                   <div class="options">
                     <h6>
-                      $17.99
+                      $12.99
                     </h6>
                         <g>
                           <g>
@@ -247,11 +243,7 @@
             <div class="box">
               <div>
                 <div class="images">
-<<<<<<< HEAD
                   <img src="images/hickory-smoked_bbq_pulled_pork_s (2).png" alt="">
-=======
-                  <img src="images/theworldend_1_500x286.jpg" alt="">
->>>>>>> parent of b641114 (pictures)
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -295,11 +287,7 @@
             <div class="box">
               <div>
                 <div class="images">
-<<<<<<< HEAD
                   <img src="images/cheesecake,_chocolate_brownies,_ (2).png" alt="">
-=======
-                  <img src="images/theworldend_1_500x286.jpg" alt="">
->>>>>>> parent of b641114 (pictures)
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -343,18 +331,14 @@
             <div class="box">
               <div>
                 <div class="images">
-<<<<<<< HEAD
                   <img src="images/bbq_bacon_cheddar_burger,_side_o (1).png" alt="">
-=======
-                  <img src="images/theworldend_1_500x286.jpg" alt="">
->>>>>>> parent of b641114 (pictures)
                 </div>
                 <div class="detail-box">
                   <h5>
                     Burger and Beyond
                   </h5>
                   <p>
-                    Includes a Pretzel Burger, Mac & Cheese, and Onion Rings
+                    Includes a BBQ Bacon Burger, Mac & Cheese, and Onion Rings
                   </p>
                   <div class="options">
                     <h6>
