--- a/about.html
+++ b/about.html
@@ -19,15 +19,18 @@
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
   <!-- End of HubSpot Embed Code -->
-<!--for the theams page only -->
-<link rel="stylesheet" type="text/css" href="css/styleforteams.css" />
- <!-- bootstrap core css -->
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-74a4db7e-1a5a-47e6-9975-16ac0b58cc17" data-elfsight-app-lazy></div>
+  <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!--owl slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <!-- nice select  -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css"
+    integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ=="
+    crossorigin="anonymous" />
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
 
@@ -35,26 +38,13 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <script src="store.js"></script>
 
-  <style>
-    /* Add custom styles for the header background */
-    .header_section {
-      background-color: #333; /* Change this to your desired header background color */
-      color: #fff; /* Change this to your desired text color for the header */
-    }
 
-    /* Add custom styles for the main content background */
-    body {
-      background-color: #fff; /* Change this to your desired main content background color */
-    }
-  </style>
+
+</style>
 </head>
-
-<body class="sub_page">
-
- <!-- header section starts -->
-
- <body class="sub_page">
+<body>
   <div class="hero_area">
     <div class="bg-box">
       <img src="images/hero-bg.jpg" alt="">
@@ -76,7 +66,7 @@
   
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
-      <li class="nav-item ">
+      <li class="nav-item active">
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -167,7 +157,7 @@
 
 
 
- <!-- footer section -->
+  <!-- footer section -->
 <footer class="footer_section">
   <div class="container">
     <div class="row">
@@ -175,11 +165,11 @@
         <div class="footer_contact">
           <h4>Contact Us</h4>
           <div class="contact_link_box">
-            <a href="">
+            <a href="#">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>Call +01 (800) GRILL-FUN</span>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>gamedaygrill@gmail.com</span>
             </a>
@@ -189,25 +179,23 @@
       <div class="col-md-4 footer-col">
         <div class="footer_detail">
           <a href="#" class="footer-logo">
-            <!-- Replace the placeholder below with your logo image path -->
             <img src="images/Main_logo.png" alt="Game Day Grill Logo">
           </a>
           <p></p>
-          <a href="mural.html" class="btn btn-primary">Mural</a> <!-- Button with link added here -->
           <div class="footer_social">
-            <a href="">
+            <a href="#">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="#">
               <i class="fa fa-pinterest" aria-hidden="true"></i>
             </a>
           </div>
@@ -217,6 +205,12 @@
         <h4>Opening Hours</h4>
         <p>Monday - Friday</p>
         <p>8.00 Am -2.30 Pm</p>
+        <div>
+          <a href="mural.html" style="color: white;">Mural</a> <!-- Text link for Mural page with white color -->
+        </div>
+        <div>
+          <a href="terms.html" style="color: white;">Terms and Conditions</a> <!-- Text link for Terms and Conditions page with white color -->
+        </div>
       </div>
     </div>
     <div class="footer-info">
@@ -224,3 +218,24 @@
     </div>
   </div>
 </footer>
+<!-- jQery -->
+<script src="js/jquery-3.4.1.min.js"></script>
+<!-- popper js -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<!-- bootstrap js -->
+<script src="js/bootstrap.js"></script>
+<!-- owl slider -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<!-- isotope js -->
+<script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
+<!-- nice select -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+<!-- custom js -->
+<script src="js/custom.js"></script>
+<!-- Google Map -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+<!-- End Google Map -->
+
+<!-- Your additional scripts go here -->
+</body>
+</html>
