--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
   
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -105,7 +105,7 @@
   </div>
   </header>
   <!-- end header section -->
-<
+
 <!--Body section-->
 <!-- about section -->
 
@@ -156,8 +156,7 @@
 
 
 
-
-  <!-- footer section -->
+<!-- footer section -->
 <footer class="footer_section">
   <div class="container">
     <div class="row">
