--- a/menu.html
+++ b/menu.html
@@ -507,7 +507,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Main_logo (1) (2).png" alt="">
+                  <img src="images/PRIMERIB123.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
