images and linking

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Fried-Chicken-Sandwiches_500x286.webp" alt="">
+                  <img src="images/Fried-Chicken-Sandwiches_500x286.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -301,7 +301,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Popeyes-Cajun-Fries_500x286.png" alt="">
+                  <img src="images/Popeyes-Cajun-Fries_500x286 (1).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -325,7 +325,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/PRIMERIB123.PNG" alt="">
+                  <img src="images/PRIMERIB123 (1).PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
