--- a/menu.html
+++ b/menu.html
@@ -507,7 +507,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/PRIMERIB123.PNG" alt="">
+                  <img src="images/PRIMERIB123 (1).PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -573,7 +573,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Fried-Chicken-Sandwiches_500x286.webp" alt="Another Burger Image">
+                  <img src="images/Fried-Chicken-Sandwiches_500x286.png" alt="Another Burger Image">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -618,7 +618,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Popeyes-Cajun-Fries_500x286.png" alt="Another Burger Image">
+                  <img src="images/Popeyes-Cajun-Fries_500x286 (1).png" alt="Another Burger Image">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -642,7 +642,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Coleslaw1.png" alt="">
+                  <img src="images/coleslaw .png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
