--- a/menu.html
+++ b/menu.html
@@ -507,7 +507,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/PRIMERIB123 (1).PNG" alt="">
+                  <img src="images/Black_n_bleu_burger_500x285.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
