--- a/specials.html
+++ b/specials.html
@@ -111,7 +111,7 @@
   <section class="food_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
+        <h2 style="color: white;">
           Our Specials
         </h2>
       </div>
