--- a/team.html
+++ b/team.html
@@ -126,19 +126,7 @@
           </div>
         </div>
   
-        <div class="col-sm-6 col-lg-4 all appetizers text-center">
-          <div class="box text-center"> <!-- Added text-center class to center align the text -->
-            <div>
-              <div class="detail-box">
-                <h5>Rojan</h5>
-                <p>Presentation Developer</p>
-                <div class="options">
-                  <h6></h6>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+       
   
         <div class="col-sm-6 col-lg-4 all appetizers">
           <div class="box text-center"> <!-- Added text-center class to center align the text -->
@@ -153,7 +141,19 @@
             </div>
           </div>
         </div>
-  
+   <div class="col-sm-6 col-lg-4 all appetizers text-center">
+          <div class="box text-center"> <!-- Added text-center class to center align the text -->
+            <div>
+              <div class="detail-box">
+                <h5>Rojan Acharya</h5>
+                <p>Presentation Developer</p>
+                <div class="options">
+                  <h6></h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col-sm-6 col-lg-4 all appetizers mx-auto">
           <div class="box text-center"> <!-- Added text-center class to center align the text -->
             <div>
