--- a/specials.html
+++ b/specials.html
@@ -125,7 +125,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+                  <img src="images/image (3) (1).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -148,7 +148,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/theworldend_1_500x286.jpg" alt="">
+                  <img src="images/image (4) (1).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
