order now and carousel

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <!-- Add more items here as needed -->
         </div>
     </ul>
-    <div class="user_option">
+    <div class="user_option d-flex justify-content-end">
       <!-- Your existing user options go here -->
       <a href="order_online.html" class="order_online">
         Order Online
