--- a/menu.html
+++ b/menu.html
@@ -942,8 +942,8 @@
 
   <!-- end food section -->
 
- <!-- footer section -->
- <footer class="footer_section">
+  <!-- footer section -->
+<footer class="footer_section">
   <div class="container">
     <div class="row">
       <div class="col-md-4 footer-col">
@@ -990,8 +990,12 @@
         <h4>Opening Hours</h4>
         <p>Monday - Friday</p>
         <p>8.00 Am -2.30 Pm</p>
-        <a href="mural.html" style="color: white;">Mural</a> <!-- Text link for Mural page with white color -->
-        <a href="terms.html" style="color: white;">Terms and Conditions</a> <!-- Text link for Terms and Conditions page with white color -->
+        <div>
+          <a href="mural.html" style="color: white;">Mural</a> <!-- Text link for Mural page with white color -->
+        </div>
+        <div>
+          <a href="terms.html" style="color: white;">Terms and Conditions</a> <!-- Text link for Terms and Conditions page with white color -->
+        </div>
       </div>
     </div>
     <div class="footer-info">
