--- a/specials.html
+++ b/specials.html
@@ -199,7 +199,7 @@
                     Crispy Classics
                   </h5>
                   <p>
-                    Includes Crunchy Onion Rings, Fried Pickles, Cajun Fries
+                    Includes Crunchy Onion Rings, Fried Pickles, Cajun Fries, and any sauce.
                   </p>
                   <div class="options">
                     <h6>
